# techsnacks-agent

./: .env.example  .gitignore  ARCHITECTURE.md  PERPLEXITY_INTEGRATION.md  QUICKSTART.md  README.md  app.py  pyproject.toml  requirements.txt  start.sh  techsnack_apple_siri_gemini.md  techsnack_cuda.md  techsnack_custom_20251123_112454.md  techsnack_custom_20251125_222316.md  techsnack_custom_20251127_223052.md  techsnack_custom_20251202_233627.md  techsnack_custom_20251230_230558.md  techsnack_custom_20260113_135215.md  techsnack_fpt:nvidia.md  techsnack_gql_1.md  techsnack_gql_1_5.md  techsnack_gql_2.md  techsnack_gql_3.md  techsnacks-agent-plan.md  techsnacks_google_win_ai.md  techsnacks_pordcast.md
src/techsnack/: config.py  logging_config.py  models.py
src/techsnack/graph/: graph.py  state.py
src/techsnack/graph/nodes/: __init__.py  news_fetcher_node.py  planner_node.py  researcher_node.py  topic_selector_node.py  writer_node.py
src/techsnack/prompts/: news_discovery.md  planner_system.md  planner_user.md  prompts.py  topic_selector.md  writer.md
src/techsnack/prompts/examples/: techsnack_01_cursor.md  techsnack_02_rag.md  techsnack_05_langfuse.md
src/techsnack/tools/: news_fetcher.py  perplexity_search.py  query_builder.py  web_search.py
tests/: test_gemini_key.py  test_graph.py  test_nodes.py  test_perplexity.py  test_setup.py  test_tools.py
